# backend-engineering-challenge

solution/: .gitignore  README.md  pyproject.toml
solution/examples/: events.json
solution/tests/: test_core.py  test_models.py  test_utils.py
solution/unbabel_cli/: cli.py  core.py  models.py  utils.py
